--- a/stile.css
+++ b/stile.css
@@ -1,21 +1,19 @@
-body{
-    background-color:rgb(053, 255, 355);
-  }
+body {
+  background-color: rgb(053, 255, 355);
+}
 
-  h1{
-    color:rgb(17, 12, 43);
-    border-radius: 25px;
- 
+h1 {
+  color: rgb(17, 12, 43);
+  border-radius: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  }
-
-  h2{
-    color:rgb(17, 12, 43);
-  }
-  h3{
-    color:rgb(17, 12, 43);
-
-  }
-
-
-
+h2 {
+  color: rgb(17, 12, 43);
+}
+h3 {
+  color: rgb(17, 12, 43);
+}
+p{
+  font-family: monospace;
+}
